adicionando passo de limpar filtro

--- a/ChefDeliveryTests/end2end/Home.yaml
+++ b/ChefDeliveryTests/end2end/Home.yaml
@@ -6,4 +6,6 @@ appId: br.com.alura.ChefDelivery
 - tapOn: "Filtrar"
 - tapOn: "5 estrelas ou mais"
 - assertVisible: "Nenhum resultado encontrado,"
+- tapOn: "Filtrar"
+- tapOn: "Limpar filtro"
 
